Stopped a pesky side scrollbar, still trying to work out how to make the desktop layout look nice

--- a/src/styles/helpers/_mixins.scss
+++ b/src/styles/helpers/_mixins.scss
@@ -46,7 +46,7 @@
 }
 
 @mixin big-screen-box {
-    background-color: $box-color;
+    background-color: $main-font-color;
     color: $dark-font-color;
     max-width: 700px;
 }
