--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -92,9 +92,8 @@ ul {
 .box {
   margin: 1em;
   padding: 0.5em;
-  background-color: #3FC1C9;
+  background-color: #0075d6;
   color: black;
-  border-radius: 2em;
 }
 
 @media screen and (min-width: 768px) {
@@ -149,15 +148,16 @@ ul {
   -ms-grid-row: 1;
   -ms-grid-column: 1;
   grid-area: nav;
-  position: -webkit-sticky;
-  position: sticky;
-  top: 0;
+  position: fixed;
   width: 100%;
   z-index: 1;
 }
 
 @media screen and (min-width: 768px) {
   #nav {
+    position: -webkit-sticky;
+    position: sticky;
+    top: 0;
     border-bottom: 1px solid #F0F8FF;
     background-color: #FC5185;
     height: auto;
@@ -202,10 +202,10 @@ ul {
   #nav .menu a {
     border: none;
     margin: 0;
-    padding: 0 2em;
+    padding: 0 4.3vw;
   }
   #nav .menu a:hover {
-    background-color: #3FC1C9;
+    background-color: #0075d6;
   }
 }
 
@@ -220,7 +220,7 @@ ul {
     margin: 0;
     padding: 0em;
     position: relative;
-    left: 10px;
+    left: 0px;
     width: 100%;
   }
 }
@@ -399,7 +399,7 @@ small {
 
 @media screen and (min-width: 768px) {
   #about .box {
-    background-color: #3FC1C9;
+    background-color: #F0F8FF;
     color: black;
     max-width: 700px;
   }
@@ -497,7 +497,7 @@ small {
 
 @media screen and (min-width: 768px) {
   #speaking .box {
-    background-color: #3FC1C9;
+    background-color: #F0F8FF;
     color: black;
     max-width: 700px;
   }
